// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostLinkEmbeds - Snapshots > matches snapshot for Twitter embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="mx-0 max-w-70 sm:mx-auto sm:max-w-none [&_.react-tweet-theme]:m-0! [&_.tweet-media\\\\_root\\\\_\\\\_k6gQ2]:max-h-75! [&_.tweet-media\\\\_root\\\\_\\\\_k6gQ2]:overflow-y-auto!"
    data-testid="twitter-container"
    data-theme="dark"
  >
    <div
      data-testid="twitter-tweet"
      data-tweet-id="20"
    >
      Mocked Tweet 
      20
    </div>
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for Vimeo embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="relative pt-[56.25%]"
    data-testid="vimeo-aspect-ratio-wrapper"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
      allowfullscreen=""
      class="rounded-md absolute top-0 left-0 h-full w-full"
      data-testid="Vimeo video player"
      height="auto"
      loading="lazy"
      sandbox="allow-scripts allow-same-origin allow-presentation allow-popups allow-popups-to-escape-sandbox"
      src="https://player.vimeo.com/video/123456789"
      title="Vimeo video 123456789"
      width="100%"
    />
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for X.com embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="mx-0 max-w-70 sm:mx-auto sm:max-w-none [&_.react-tweet-theme]:m-0! [&_.tweet-media\\\\_root\\\\_\\\\_k6gQ2]:max-h-75! [&_.tweet-media\\\\_root\\\\_\\\\_k6gQ2]:overflow-y-auto!"
    data-testid="twitter-container"
    data-theme="dark"
  >
    <div
      data-testid="twitter-tweet"
      data-tweet-id="1234567890123456789"
    >
      Mocked Tweet 
      1234567890123456789
    </div>
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for YouTube embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="relative pt-[56.25%]"
    data-testid="youtube-aspect-ratio-wrapper"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
      allowfullscreen=""
      class="rounded-md absolute top-0 left-0 h-full w-full"
      data-testid="YouTube video player"
      height="auto"
      loading="lazy"
      sandbox="allow-scripts allow-same-origin allow-presentation allow-popups allow-popups-to-escape-sandbox"
      src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?enablejsapi=1"
      title="YouTube video dQw4w9WgXcQ"
      width="100%"
    />
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for no embed (no URL) 1`] = `null`;
